Bug 1615562 - Don't move accessible focus if caret is collapsed or not on focusable. r=Jamie

If a keyboard-focused accessible is removed, the caret jumps to its
nearest ancestor. To avoid arbitrary accessibility focus moves, ignore
caret events that have no selection and are not focusable items.

Differential Revision: https://phabricator.services.mozilla.com/D63541